# chip8-emulator

./: CMakeLists.txt  Dockerfile  README.md
client/: chip8.css  index.js  shell.html
include/: Chip8.h  chip8.hpp  gui.hpp
src/: Chip8.cpp  Main.cpp  chip8.cpp  emscriptenMain.cpp  emscripten_main.cpp  gui.cpp  main.cpp
tests/: chip8_test.cpp
